[gd_scene load_steps=6 format=3 uid="uid://yyjh0tg8qxw1"]

[ext_resource type="Script" path="res://scenes/enemy/hunter.gd" id="1_rxkhn"]
[ext_resource type="Texture2D" uid="uid://byqxv0ibok4r1" path="res://graphics/enemies/hunter/hunter.png" id="1_xijv4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jguxe"]
radius = 44.0
height = 344.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2hkre"]
radius = 1666.12

[sub_resource type="CircleShape2D" id="CircleShape2D_cqc52"]
radius = 322.895

[node name="Hunter" type="CharacterBody2D" groups=["Entity", "Hunters"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_rxkhn")

[node name="Torso" type="Sprite2D" parent="."]
position = Vector2(7, 0)
rotation = 1.5708
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_xijv4")

[node name="Sprite2D" type="Sprite2D" parent="Torso"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jguxe")

[node name="NoticeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_2hkre")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(-9, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_cqc52")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Timers" type="Node" parent="."]

[node name="NavigationTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="Timers/NavigationTimer" to="." method="_on_navigation_timer_timeout"]
